--- a/HTML-CSS/contact.html
+++ b/HTML-CSS/contact.html
@@ -20,7 +20,7 @@
     </header>
 
     <section id="contact" class="margin-top-contact">
-      <form>
+      <form method="POST" action="" class="tab">
         <fieldset>
           <legend>Contact</legend>
 
